solving convergence problem in fsolve function

--- a/codes/lect_006CSTRCoil.ipynb
+++ b/codes/lect_006CSTRCoil.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "import numpy as np\n",
     "import math\n",
-    "from scipy.optimize import fsolve"
+    "from scipy.optimize import fsolve, fmin"
    ]
   },
   {
@@ -44,14 +44,14 @@
     "    if fun_out:\n",
     "        return [lcoil, nloops, vtot, vcoil]\n",
     "    else:\n",
-    "        return abs(dvessel - dguess)\n",
+    "        return dvessel - dguess\n",
     "\n",
     "def temperaturefun(tcout, params, fun_out=False):\n",
     "    tcin, tr, acoil, u, qr = params\n",
     "\n",
-    "    dtin = tr - tcin\n",
-    "    dtout = tr - tcout\n",
-    "    dtml = (dtin-dtout)/np.log(dtin/dtout)\n",
+    "    delta_temp_in = tr - tcin\n",
+    "    delta_temp_out = tr - tcout\n",
+    "    dtml = (delta_temp_in-delta_temp_out) / np.log((delta_temp_in)/abs(delta_temp_out))\n",
     "    qcal = u * acoil * dtml\n",
     "    if fun_out:\n",
     "        return dtml\n",
@@ -154,25 +154,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "virgin-thumb",
+   "execution_count": 7,
+   "id": "hairy-permission",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tcout_seed = 0.9*Tr\n",
+    "delta_temp_in = Tr - Tcin\n",
+    "delta_temp_out = Tr - Tcout_seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "expired-protocol",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ipython-input-2-18c06708941c>:19: RuntimeWarning: invalid value encountered in log\n",
-      "  dtml = (dtin-dtout)/np.log(dtin/dtout)\n"
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.002211\n",
+      "         Iterations: 41\n",
+      "         Function evaluations: 83\n"
      ]
     }
    ],
    "source": [
-    "Tcout = 0.9*Tr\n",
+    "Tcout_seed = 300\n",
     "\n",
     "parameters = [Tcin, Tr, Acoil, U, Qr]\n",
-    "Tcout = fsolve(lambda x: temperaturefun(x, parameters), Tcout)\n",
-    "\n",
+    "Tcout = fmin(lambda x: temperaturefun(x, parameters), Tcout_seed, ftol=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "virgin-thumb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Fcoil = Qr/(Cpj*(Tcout[0]-Tcin))\n",
     "Fcoil = Fcoil/0.001\n",
     "\n",
@@ -181,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "powered-birthday",
    "metadata": {},
    "outputs": [
@@ -189,24 +211,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cooling fluid parameters:\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to numpy.ndarray.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-f9408353a6fc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cooling fluid parameters:'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Exit temperature : {:1.2f} K'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTcout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Log-mean temperature difference : {:1.2f} K'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDTLM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Coolant flowrate : {:1.2f} cm^3/s'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFcoil\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to numpy.ndarray.__format__"
+      "Cooling fluid parameters:\n",
+      "Exit temperature : 436.15 K\n",
+      "Log-mean temperature difference : 7.12 K\n",
+      "Coolant flowrate : 34.88 cm^3/s\n"
      ]
     }
    ],
    "source": [
     "print('Cooling fluid parameters:')\n",
-    "print('Exit temperature : {:1.2f} K'.format(Tcout))\n",
+    "print('Exit temperature : {:1.2f} K'.format(Tcout[0]))\n",
     "print('Log-mean temperature difference : {:1.2f} K'.format(DTLM))\n",
     "print('Coolant flowrate : {:1.2f} cm^3/s'.format(Fcoil))"
    ]
