--- a/05-exercises.Rmd
+++ b/05-exercises.Rmd
@@ -6,3 +6,4 @@ Exercises | Name | Solution
 \@ref(exr:it003001) |Operation of a cooled exothermic CSTR| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_005CSTRStability.ipynb)
 \@ref(exr:it003002) |Non-rigorous coil design for a CSTR| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_006CSTRCoil.ipynb)
 \@ref(exr:it003003) |Heat transfer requirement for multiple CSTRs| &nbsp;
+\@ref(exr:it003004) |Effect of the rate laws over PFR performance| (https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_007PFRisoNorders.ipynb)
